--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.7.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-player": "^1.14.2",
     "react-responsive": "^8.0.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "react-scroll-parallax": "^2.2.0",
-    "react-spring": "^8.0.27"
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
