adjusted the fade enter component

--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "jest": {
+    "collectCoverageFrom": ["src/**/*.{js,jsx}"]
   },
   "browserslist": {
     "production": [
