--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "extends": "react-app"
   },
   "jest": {
-    "collectCoverageFrom": ["src/**/*.{js,jsx}"]
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}"
+    ]
   },
   "browserslist": {
     "production": [
